feat(credenciais-profissional): adicionar entidade, DTO, serviço e controller